--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Curriculun Vitae</title>
+    <title>Curriculum Vitae</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -84,6 +84,26 @@
             <div class="conteudo">
             <h3><b>Praticas em Metodologias Ágeis(Pós Graduação)</b> @Unicesumar</h3>
             <p class="periodo t60">De Janeiro de 2021 a Dezembro de 2021</p>
+            </div>
+        </li>
+
+        <li>
+            <img
+                src="imagens/udemy.jpg"
+                />
+           <div class="conteudo">
+           <h3><b>Desenvolvimento Web Completo</b> @Udemy</h3>
+           <p class="periodo t60">Janeiro de 2021 em andamento</p>
+           </div>
+       </li>
+
+       <li>
+             <img
+            src="imagens/Terra.png"
+            />
+            <div class="conteudo">
+            <h3><b>Inglês</b> @Terra</h3>
+            <p class="periodo t60">Outubro de 2020 em andamento</p>
             </div>
         </li>
 
