ajustes segunda coluna

--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
         </li>
      </ul>
  </div>
-<div class="formacao">
+
+ 
+ <div class="formacao">
      <h2>Formação</h2>
      <div class="linha"></div>
     <ul>
@@ -115,10 +117,25 @@
             </div>
         </li>
     </ul>
+    </div>
+    </div>
+    
+    <div class="coluna-maior">
+    <div class="habilidades">
+    <h2>Habilidades</h2>
+    <div class="habilidade"></div>
+    <h3>Front</h3>
+    <ul>
+        <li>
+            <p class="nome">HTML</p>
+            <div class="barra"></div>
+            <div class="barra"></div>
+            <div class="barra"></div>
+            <div class="barra"></div>
+            <div class="barra"></div>
+        </li>
+    </ul>
 </div>
-
-<div class="coluna-maior">
-
 </div>
 </main>
  
