--- a/index.html
+++ b/index.html
@@ -88,27 +88,7 @@
             <p class="periodo t60">De Janeiro de 2021 a Dezembro de 2021</p>
             </div>
         </li>
-
-        <li>
-            <img
-                src="imagens/udemy.jpg"
-                />
-           <div class="conteudo">
-           <h3><b>Desenvolvimento Web Completo</b> @Udemy</h3>
-           <p class="periodo t60">Janeiro de 2021 em andamento</p>
-           </div>
-       </li>
-
-       <li>
-             <img
-            src="imagens/Terra.png"
-            />
-            <div class="conteudo">
-            <h3><b>Inglês</b> @Terra</h3>
-            <p class="periodo t60">Outubro de 2020 em andamento</p>
-            </div>
-        </li>
-
+              
         <li>
              <img src="imagens/unopar.jfif" alt="">
             <div class="conteudo">
@@ -118,23 +98,171 @@
         </li>
     </ul>
     </div>
+    <div class="cursos">
+        <h2>Cursos e Certificados</h2>
+        <div class="linha"></div>
+        <ul>
+            <li>
+                <img
+                    src="imagens/udemy.jpg"
+                    />
+               <div class="conteudo">
+               <h3><b>Desenvolvimento Web Completo</b> @Udemy</h3>
+               <p class="periodo t60">Janeiro de 2021 em andamento</p>
+               </div>
+           </li>
+           <li>
+            <img
+                src="imagens/Terra.png"
+                />
+                <div class="conteudo">
+                <h3><b>Inglês</b> @Terra</h3>
+                <p class="periodo t60">Outubro de 2020 em andamento</p>
+                </div>
+           </li>
+        </ul>
+    </div>    
+        </div>
+
+        <div class="coluna-maior">
+         <h2>Habilidades</h2>
+         <div class="habilidades">
+         <div class="habilidade">
+            <h3>Front</h3>
+                <ul>
+                <li>
+                    <p>HTML</p>
+                    <div class="progresso">
+                        <div class="barra"></div>
+                        <div class="barra"></div>
+                        <div class="barra incompleto"></div>
+                        <div class="barra incompleto"></div>
+                        <div class="barra incompleto"></div>
+                    </div>
+                </li>
+                <li>
+                    <p>CSS</p>
+                    <div class="progresso">
+                        <div class="barra"></div>
+                        <div class="barra incompleto"></div>
+                        <div class="barra incompleto"></div>
+                        <div class="barra incompleto"></div>
+                        <div class="barra incompleto"></div>
+                    </div>
+                </li>
+                <li>
+                    <p>JavaScript</p>
+                    <div class="progresso">
+                        <div class="barra"></div>
+                        <div class="barra incompleto"></div>
+                        <div class="barra incompleto"></div>
+                        <div class="barra incompleto"></div>
+                        <div class="barra incompleto"></div>
+                    </div>
+                </li>
+                <li>
+                    <p>React</p>
+                    <div class="progresso">
+                        <div class="barra"></div>
+                        <div class="barra incompleto"></div>
+                        <div class="barra incompleto"></div>
+                        <div class="barra incompleto"></div>
+                        <div class="barra incompleto"></div>
+                    </div>
+                </li>
+                </ul>
+         </div>
+          <div class="habilidade">
+            <h3>Back</h3>
+              <ul>
+                 <li>
+                  <p>Nods.js</p>
+                  <div class="progresso">
+                      <div class="barra"></div>
+                      <div class="barra incompleto"></div>
+                      <div class="barra incompleto"></div>
+                      <div class="barra incompleto"></div>
+                      <div class="barra incompleto"></div>
+                  </div>
+                 </li>
+                 <li>
+                  <p>PostgreSQL</p>
+                  <div class="progresso">
+                     <div class="barra"></div>
+                      <div class="barra incompleto"></div>
+                      <div class="barra incompleto"></div>
+                      <div class="barra incompleto"></div>
+                      <div class="barra incompleto"></div>
+                  </div>
+                 </li>
+                 <li>
+                  <p>Spring</p>
+                  <div class="progresso">
+                      <div class="barra incompleto"></div>
+                      <div class="barra incompleto"></div>
+                      <div class="barra incompleto"></div>
+                      <div class="barra incompleto"></div>
+                      <div class="barra incompleto"></div>
+                  </div>
+                 </li>
+                 <li>
+                  <p>REST</p>
+                  <div class="progresso">
+                      <div class="barra incompleto"></div>
+                      <div class="barra incompleto"></div>
+                      <div class="barra incompleto"></div>
+                      <div class="barra incompleto"></div>
+                      <div class="barra incompleto"></div>
+                  </div>
+                 </li>
+             </ul>
+          </div>
+        <div class="habilidade">
+            <h3>Soft Skills</h3>
+         <ul>
+                 <li>
+                  <p>Adaptabilidade</p>
+                        <div class="progresso">
+                            <div class="barra"></div>
+                            <div class="barra"></div>
+                            <div class="barra"></div>
+                            <div class="barra"></div>
+                            <div class="barra"></div>
+                        </div>
+                   </li>
+                    <li>
+                        <p>Criatividade</p>
+                        <div class="progresso">
+                            <div class="barra"></div>
+                            <div class="barra"></div>
+                            <div class="barra"></div>
+                            <div class="barra"></div>
+                            <div class="barra"></div>
+                        </div>
+                    </li>
+                 <li>
+                    <p>Flexibilidade</p>
+                    <div class="progresso">
+                        <div class="barra"></div>
+                        <div class="barra"></div>
+                        <div class="barra"></div>
+                        <div class="barra"></div>
+                        <div class="barra"></div>
+                    </div>
+                 </li>
+             <li>
+                  <p>Trabalho em equipe</p>
+                  <div class="progresso">
+                    <div class="barra"></div>
+                        <div class="barra"></div>
+                        <div class="barra"></div>
+                        <div class="barra"></div>
+                        <div class="barra incompleto"></div>
+                </div>
+             </li>
+        </ul>
     </div>
-    
-    <div class="coluna-maior">
-    <div class="habilidades">
-    <h2>Habilidades</h2>
-    <div class="habilidade"></div>
-    <h3>Front</h3>
-    <ul>
-        <li>
-            <p class="nome">HTML</p>
-            <div class="barra"></div>
-            <div class="barra"></div>
-            <div class="barra"></div>
-            <div class="barra"></div>
-            <div class="barra"></div>
-        </li>
-    </ul>
+  </div>
 </div>
 </div>
 </main>
