--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                         <div class="barra"></div>
                     </div>
                  </li>
-             <li>
+                <li>
                   <p>Trabalho em equipe</p>
                   <div class="progresso">
                     <div class="barra"></div>
@@ -266,6 +266,9 @@
 </div>
 </div>
 </main>
+<footer>
+    Projeto desenvolvido de acordo com a imersão da Cubos Academy 2020
+</footer>
  
  </body>
 
